[package]
name = "eggersmann_app_server_appliance_availability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eggersmann_app_server_auth = {git = "https://github.com/physics515/egg-server-auth"}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "*"
reqwest = { version = "*", features = ["cookies", "blocking", "json", "rustls-tls"] }
playwright = "*"
scraper = "*"
duration-string = "*"
fuzzy-matcher = "*"
office = "*"
urlencoding = "*"
azure_security_keyvault = "*"
azure_identity = "*"