[package]
name = "eggersmann_app_server_appliance_availability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eggersmann_app_server_auth = {git = "https://github.com/physics515/egg-server-auth"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["cookies", "blocking", "json", "rustls-tls"] }
playwright = "0.0"
scraper = "0.19"
duration-string = "0.4"
fuzzy-matcher = "0.3"
office = "0.8"
urlencoding = "2.1"
azure_security_keyvault = "0.20"
azure_identity = "0.20"